Deployment/temp/templates/iptables
*filter
:INPUT DROP [1:52]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [15:1524]
-A INPUT  -p tcp -s 199.27.128.0/21 -j ACCEPT
-A INPUT  -p tcp -s 173.245.48.0/20  -j ACCEPT
-A INPUT -p tcp -s 103.21.244.0/22  -j ACCEPT
-A INPUT -p tcp -s 103.22.200.0/22  -j ACCEPT
-A INPUT -p tcp -s 103.31.4.0/22  -j ACCEPT
-A INPUT -p tcp -s 141.101.64.0/18  -j ACCEPT
-A INPUT -p tcp -s 108.162.192.0/18  -j ACCEPT
-A INPUT -p tcp -s 190.93.240.0/20  -j ACCEPT
-A INPUT -p tcp -s 188.114.96.0/20 -j ACCEPT
-A INPUT -p tcp -s 197.234.240.0/22  -j ACCEPT
-A INPUT -p tcp -s 198.41.128.0/17  -j ACCEPT
-A INPUT -p tcp -s 162.158.0.0/15 -j ACCEPT
-A INPUT -p tcp -s 104.16.0.0/12  -j ACCEPT
-A INPUT -p tcp -s 131.0.72.0/22  -j ACCEPT
-A INPUT -p tcp -s 172.64.0.0/13 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -s 5.10.80.206 -j ACCEPT
-A INPUT -s 159.8.235.66 -j ACCEPT
-A INPUT -s 10.68.18.7 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m state --state RELATED,ESTABLISHED -m tcp --dport 9621 -j ACCEPT

-A INPUT -s 192.168.0.33 -j ACCEPT


-A INPUT -s  169.50.131.150    -j ACCEPT
COMMIT
